terraform/bootstrap/security_groups.tf
resource "aws_security_group" "webstore_sg_temp" {
  name        = "webstore_sg_temp"
  description = "SG for grocerymate webserver instance"
  vpc_id      = var.vpc_id

  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    protocol  = "tcp"
    from_port = 5001
    to_port   = 5001
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg_temp" {
  name        = "rds_sg_temp"
  description = "SG for RDS, allowing inbound traffic only from grocerymate webserver SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    security_groups = [aws_security_group.webstore_sg_temp.id]
    description = "PostgreSQL from grocerymate"
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
